# aleScript-main

./: Build-Windows.sh  Build.bat  Build.sh  CMakeLists.txt  Makefile  Wiki.md  aleScript-main.code-workspace  example.txt  mingw-toolchain.cmake  program.ale  test.ale  verybasictextwriter.ale
output/: alescript
pacman/: PKGBUILD
src/: brews.cpp  brews.d  brews.h  grains.cpp  interpreter.cpp  interpreter.d  interpreter.h  main.cpp  main.d  main.h  systems.cpp  systems.d
src-ide/: ide.cpp
